Adds tablet and desctop version for HomePage

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   font-family: Andika New Basic, sans-serif;
-  background-image: url('images/bgLightl.jpg');
+  background-image: url('images/bg-dark-4827.jpg');
   color: rgb(85, 83, 83);
 }
 
