Adds correct styles for notification

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,12 @@ ul {
 a {
   text-decoration: none;
 }
+
+.Toastify {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 320px;
+  height: 100px;
+}
